debugged css made responsive

--- a/responsive.css
+++ b/responsive.css
@@ -100,7 +100,7 @@
 
     /* menu bar */
     .menu-bar {
-        display: block;
+        display: none;
         padding: 2rem 2rem 0 2rem;
         height: 100vh;
         width: 80%;
@@ -141,7 +141,7 @@
     }
     .card {
         display: grid;
-        grid-template-rows: 2fr 1fr;
+        grid-template-rows: 1fr 1fr;
     }
     .card-img {
         width: 100%;
@@ -157,5 +157,27 @@
     .card-info p{
         font-size: 1.3rem;
     }
-    
+    .share-div ,.star-star {
+        text-align: center;
+    }
+    .share-div , .copyright{
+        font-size: 14px;
+    }
+    .share-div h3 {
+        font-size: 1.2rem;
+        font-weight: 700;
+    }
+    .share-div p {
+        font-size: 1.1rem;
+    }
+    .terms-and-conditions {
+        margin: 1rem;
+    }
+}
+
+@media (max-width: 340px) {
+    .menu-links-2 {
+        font-size: 1rem;
+        flex-wrap: wrap;
+    }
 }
