--- a/responsive.css
+++ b/responsive.css
@@ -139,6 +139,38 @@
         align-items: center;
         font-weight: bold;
     }
+
+    /* menu further links */
+    .further-menu {
+        padding: 1rem 2rem 0 2rem;
+        height: 100vh;
+        width: 80%;
+        background-color: #fff;
+        position: absolute;
+        right: -600px;
+        top:80px;
+        transition: all 0.3s ease-in-out;
+        display: none;
+        flex-direction: column;
+        gap:2rem;
+    }
+    .menu-heading {
+        font-size: 1.2rem;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        justify-content: space-between;
+    }
+    .menu-list {
+        display: flex;
+        flex-direction: column;
+        gap:2rem;
+        font-size: 1.1rem;
+    }
+    .menu-list a {
+        text-decoration: none;
+        color: #000;
+    }
+
     .card {
         display: grid;
         grid-template-rows: 1fr 1fr;
