--- a/responsive.css
+++ b/responsive.css
@@ -101,6 +101,7 @@
     /* menu bar */
     .menu-bar {
         display: none;
+
         padding: 2rem 2rem 0 2rem;
         height: 100vh;
         width: 80%;
@@ -142,25 +143,33 @@
 
     /* menu further links */
     .further-menu {
-        padding: 1rem 2rem 0 2rem;
+
         height: 100vh;
         width: 80%;
         background-color: #fff;
         position: absolute;
         right: -600px;
-        top:80px;
+        top:70px;
         transition: all 0.3s ease-in-out;
-        display: none;
         flex-direction: column;
         gap:2rem;
+
+        display: none;
     }
     .menu-heading {
         font-size: 1.2rem;
         display: grid;
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 2fr 3fr;
         justify-content: space-between;
+
+        padding: 1rem 2rem;
+        background-color: #eee;
+    }
+    .menu-heading div {
+        font-size: 1.3rem;
     }
     .menu-list {
+        padding: 0rem 2rem 0 2rem;
         display: flex;
         flex-direction: column;
         gap:2rem;
@@ -169,6 +178,10 @@
     .menu-list a {
         text-decoration: none;
         color: #000;
+    }
+    #menu-back-btn {
+        color: #555;
+        cursor: pointer;
     }
 
     .card {
